[package]
name = "serde_jce"
authors = ["ColorSkyFun <i@colorsky.fun>"]
keywords = ["jce", "serde", "serialization"]
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
quote = "1.0.42"
syn = "2.0.111"
serde = {version = "1.0.228", features = ["derive"]}
byteorder = "1.5.0"
serde_bytes = "0.11.19"
